# weighted_rate_limiter

./: Cargo.toml  LICENSE  README.md
examples/: hello_world.rs  hello_world_rate_limiter.rs
src/: lib.rs  limiter.rs  rate_limiter.rs  weight_manager.rs
tests/: limiter.rs  rate_limiter.rs
