[package]
name = "weighted_rate_limiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
queues = "1.1"
tokio = { version = "1.15", features = ["time"] }

[dev-dependencies]
rand = "0.8"
tokio = { version = "1.15", features = ["full", "macros", "test-util"] }

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
