[package]
name = "weighted_rate_limiter"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A weighted rate limiter"
repository = "https://github.com/BenD0G/weighted_rate_limiter"
keywords = ["weighted", "rate", "limiter", "limit", "throttle"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
queues = "1.1"
tokio = { version = "1.15", features = ["time"] }

[dev-dependencies]
rand = "0.8"
tokio = { version = "1.15", features = ["full", "macros", "test-util"] }

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
